--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,44 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.11" />
+
+    <Button
+        android:id="@+id/btngallery"
+        android:layout_width="128dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="146dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="137dp"
+        android:layout_marginBottom="173dp"
+        android:text="go gallery"
+        app:layout_constraintBottom_toTopOf="@+id/btnquiz"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/btnquiz"
+        android:layout_width="131dp"
+        android:layout_height="77dp"
+        android:layout_marginStart="162dp"
+        android:layout_marginTop="173dp"
+        android:layout_marginEnd="118dp"
+        android:layout_marginBottom="203dp"
+        android:text="Go quiz"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btngallery" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
